--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,10 @@
 	<title>HCI Project Portfolio</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Bootstrap -->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="css/introHCI.css" rel="stylesheet">
 	<!-- this is a comment in HTML -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -16,67 +20,106 @@
 </head>
 
 <body>
-	<div>
+	<div class="jumbotron">
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div>
-			<h1>Michael Bernstein</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<h1 ><center>Austin Chinn</center></h1>
+			<p><center>Back-end &middot; Android &middot; Web Apps</center></p>
 		</div>
 
+		<section id="divisions">
+			<div class="row">
+		        <div class="col-xs-12 col-md-12 col-xs-12 col-md-12 col-lg-12 text-center">
+		            <h2 class="secthead">Featured Projects</h2>
+		            <h3 class="sectsub text-grayed"></h3>
+				</div>
+			</div>
+		    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+		        <div class="carousel-inner">
+		            <div class="item active">
+		                   <img class="slide-image" src="images/color1.jpg" alt="">
+		                   <p><center>CSE 130</center></p>
+		            </div>
+		            <div class="item">
+		                   <img class="slide-image" src="images/color2.jpg" alt="">
+		                   <p><center>CSE 130</center></p>
+				    </div>
+				    <div class="item">
+		                   <img class="slide-image" src="images/color3.jpg" alt="">
+		                   <p><center>CSE 130</center></p>
+		            </div>
+					<div class="item">
+		                   <img class="slide-image" src="images/datagraphhw5.png" alt="">
+		                   <p><center>CSE 150</center></p>
+		            </div>
+		        </div>
+		        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+		            <span class="glyphicon glyphicon-chevron-left"></span>
+		        </a>
+		        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+		            <span class="glyphicon glyphicon-chevron-right"></span>
+		        </a>
+		    </div>
+		</section>
 
-		<h4>Projects</h4>
+		<h4>Other Projects</h4>
 		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
-		<div id="project1">
-			<a href="project.html">
-				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
+		<div class="project" id="project1">
+			<a href="project.html" class="thumbnail">
+				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image" class="img">
 				<p>Waiting in Line</p>
 			</a>
 		</div>
-		<div id="project2">
-			<a href="project.html">
-				<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image">
+		<div class="project" id="project2">
+			<a href="project.html" class="thumbnail">
+				<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image" class="img">
 				<p>Needfinding</p>
 			</a>
 		</div>
-		<div id="project3">
-			<a href="project.html">
-				<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image">
+		<div class="project" id="project3">
+			<a href="project.html" class="thumbnail">
+				<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image" class="img">
 				<p>Prototyping</p>
 			</a>
 		</div>
-		<div id="project4">
-			<a href="project.html">
-				<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image">
+		<div class="project" id="project4">
+			<a href="project.html" class="thumbnail">
+				<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image" class="img">
 				<p>Heuristic Evaluation</p>
 			</a>
 		</div>
-		<div id="project5">
-			<a href="project.html">
-				<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image">
+		<div class="project" id="project5">
+			<a href="project.html" class="thumbnail">
+				<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image" class="img">
 				<p>Visualization</p>
 			</a>
 		</div>
-		<div id="project6">
-			<a href="project.html">
-				<img src="images/lorempixel.people.2.jpeg" alt="Lorem Pixel image">
+		<div class="project" id="project6">
+			<a href="project.html" class="thumbnail">
+				<img src="images/lorempixel.people.2.jpeg" alt="Lorem Pixel image" class="img">
 				<p>Social design</p>
 			</a>
 		</div>
-		<div id="project7">
-			<a href="project.html">
-				<img src="images/lorempixel.technics.2.jpeg" alt="Lorem Pixel image">
+		<div class="project" id="project7">
+			<a href="project.html" class="thumbnail">
+				<img src="images/lorempixel.technics.2.jpeg" alt="Lorem Pixel image" class="img">
 				<p>Gestural interaction</p>
 			</a>
 		</div>
-		<div id="project8">
-			<a href="project.html">
-				<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image">
+		<div class="project" id="project8">
+			<a href="project.html" class="thumbnail">
+				<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image" class="img">
 				<p>Design tools</p>
 			</a>
 		</div>
 	</div>
+
+	<!-- jQuery -->
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<!-- Include all compiled plugins or include individual files as needed -->
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
